--- a/Homework1/homework1.html
+++ b/Homework1/homework1.html
@@ -9,10 +9,31 @@
 <body>
 
   Put a header 1 here with the content "Your first name - Your Major"
-
+<h1>Jacob - Computer Information Systems</h1>
   Put a paragraph element here with the content being a few sentences as to why you are taking this course
-
+<p>I am taking this course because it is required for my major.</p1>
   Put a header 2 here with the content "The HTML Elements I Know"
+ <h2>The HTML Elements I know</h2>
+
+ <ol>
+<li>
+Paragraph <ol>
+  <li><a href=https://developer.mozilla.org/en-US/docs/Web/HTML/Element/p>Mozilla Doc Link</a></li>
+<li> Display: Block </li>
+<li>Attributes
+   <ol>
+     <li> The paragraph tag uses the global attributes </li>
+     </ol>
+</li>
+</ol>
+  </li>
+
+  <li>
+    Body <ol>
+
+  </li>
+
+</ol>
 
   Create a list (ordered or unordered) here with a structure similar to following:
   - Element Name
