--- a/Homework1/homework1.html
+++ b/Homework1/homework1.html
@@ -18,19 +18,27 @@
  <ol>
 <li>
 Paragraph <ol>
-  <li><a href=https://developer.mozilla.org/en-US/docs/Web/HTML/Element/p>Mozilla Doc Link</a></li>
+  <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/p" target="_blank" >Mozilla Doc Link</a></li>
 <li> Display: Block </li>
 <li>Attributes
    <ol>
-     <li> The paragraph tag uses the global attributes </li>
+     <li> The paragraph element uses the global attributes </li>
      </ol>
 </li>
 </ol>
   </li>
 
   <li>
-    Body <ol>
+    H1, H2, H3, etc <ol>
+<li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/Heading_Elements" target="_blank">Mozilla Doc Link</a></li>
+<li> Display: Block </li>
+<li> Attributes
+  <ol>
+      <li> The H1-H6 elements use the global attributes</li>
+  </ol>
 
+
+</ol>
   </li>
 
 </ol>
