--- a/Homework1/homework1.html
+++ b/Homework1/homework1.html
@@ -4,44 +4,67 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Homework 1 JH</title>
 </head>
 <body>
 
-  Put a header 1 here with the content "Your first name - Your Major"
 <h1>Jacob - Computer Information Systems</h1>
   Put a paragraph element here with the content being a few sentences as to why you are taking this course
 <p>I am taking this course because it is required for my major.</p1>
-  Put a header 2 here with the content "The HTML Elements I Know"
  <h2>The HTML Elements I know</h2>
 
  <ol>
 <li>
-Paragraph <ol>
+Paragraph (p) <ol>
   <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/p" target="_blank" >Mozilla Doc Link</a></li>
 <li> Display: Block </li>
 <li>Attributes
    <ol>
-     <li> The paragraph element uses the global attributes </li>
+     <li> The paragraph element uses the <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributesglobal" target="=_blank"> global attributes </a> </li>
      </ol>
 </li>
 </ol>
   </li>
 
   <li>
-    H1, H2, H3, etc <ol>
+    Header (H1, H2, H3, etc) <ol>
 <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/Heading_Elements" target="_blank">Mozilla Doc Link</a></li>
 <li> Display: Block </li>
 <li> Attributes
   <ol>
-      <li> The H1-H6 elements use the global attributes</li>
+      <li> The H1-H6 elements use the <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributesglobal" target="=_blank"> global attributes </a> </li>
   </ol>
-
-
 </ol>
   </li>
 
+   <li>
+     Ordered List (ol) <ol>
+ <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/ol" target="_blank">Mozilla Doc Link</a></li>
+ <li> Display: Block</li>
+ <li> Attributes
+ <ol>
+   <li>Reversed: Specifies that the list is in reverse order</li>
+   <li>Start: Specifies the numeber the list will start counting from </li>
+   <li> Type: Specifies the numbering (or lettering) type the list is sorted by </li>
+ </ol>
+     </li>
+   </ol>
+
+   <li>
+     Anchors (a) <ol>
+  <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/a" target="_blank"<a>Mozilla Doc Link</a></li>
+  <Li> Display: Inline</li>
+  <li> Attributes
+   <ol>
+    <li>Href: Used to specify where the link points to </li>
+    <li>Download: Tells the browser to download the url pointed to</li>
+    <li>Target: specifies where to display a linked url</li>
+   </ol>
+ </li>
+  </ol>
+
 </ol>
+
 
   Create a list (ordered or unordered) here with a structure similar to following:
   - Element Name
