--- a/Homework1/homework1.html
+++ b/Homework1/homework1.html
@@ -20,7 +20,7 @@ Paragraph (p) <ol>
 <li> Display: Block </li>
 <li>Attributes
    <ol>
-     <li> The paragraph element uses the <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributesglobal" target="=_blank"> global attributes </a> </li>
+     <li> The paragraph element uses the <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes" target="=_blank"> global attributes </a> </li>
      </ol>
 </li>
 </ol>
@@ -32,7 +32,7 @@ Paragraph (p) <ol>
 <li> Display: Block </li>
 <li> Attributes
   <ol>
-      <li> The H1-H6 elements use the <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributesglobal" target="=_blank"> global attributes </a> </li>
+      <li> The H1-H6 elements use the <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes" target="=_blank"> global attributes </a> </li>
   </ol>
 </ol>
   </li>
@@ -63,7 +63,35 @@ Paragraph (p) <ol>
  </li>
   </ol>
 
+<li> Strong (strong) <ol>
+
+  <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/strong" target="_blank">Mozilla Doc Link</a></li>
+  <li> Display: Inline</li>
+  <li> Attributes
+    <ol>
+      <li> The Strong element uses the <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes" target="=_blank"> global attributes </a></li>
+    </ol>
+  </li>
 </ol>
+
+</li>
+
+  <li> Image (img)
+    <ol>
+      <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img" target="_blank">Mozilla Doc link</a></li>
+      <li> Display: Inline </li>
+      <li> Attributes
+        <ol>
+          <li> Src: The url of the image</li>
+          <li> Alt: A text description of image for accessability</li>
+          <li> Height: The height of the image in pixels</li>
+        </ol>
+</ol>
+</ol>
+
+
+<h2>Vocab Definitions</h2>
+
 
 
   Create a list (ordered or unordered) here with a structure similar to following:
@@ -75,13 +103,6 @@ Paragraph (p) <ol>
       - List the rest of the attributes for this element (up to a max of 3)
   - List 5 more (for a total of six element names)
 
-  Put a header 2 here with the content "My Website Directory Structure"
-
-  Create a list here that will show the directory structure that is recommended by MDN from this <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/Dealing_with_files#What_structure_should_your_website_have">link</a>.
-  Like this:
-  - My Website Directory
-    - index.html
-    - The other directories
 
   Create a header 2 with the content "Vocab Definitions"
 
