--- a/Homework1/homework1.html
+++ b/Homework1/homework1.html
@@ -92,7 +92,113 @@ Paragraph (p) <ol>
 
 <h2>Vocab Definitions</h2>
 
+<ul>
+  <li> HTTP
+  <ol>
+    <li>Definition: </li>
+    <li><a href="" target="_blank">Source</a></li>
+  </ol>
+</li>
 
+
+
+<li> HTML
+<ol>
+  <li>Definition: </li>
+  <li><a href="" target="_blank">Source</a></li>
+</ol>
+</li>
+
+
+<li> Element
+<ol>
+  <li>Definition: </li>
+  <li><a href="" target="_blank">Source</a></li>
+</ol>
+</li>
+
+
+<li> Tag
+<ol>
+  <li>Definition: </li>
+  <li><a href="" target="_blank">Source</a></li>
+</ol>
+</li>
+
+
+<li> Block (CSS)
+<ol>
+  <li>Definition: </li>
+  <li><a href="" target="_blank">Source</a></li>
+</ol>
+</li>
+
+
+<li> Doctype
+<ol>
+  <li>Definition: </li>
+  <li><a href="" target="_blank">Source</a></li>
+</ol>
+</li>
+
+
+<li> Head
+<ol>
+  <li>Definition: </li>
+  <li><a href="" target="_blank">Source</a></li>
+</ol>
+</li>
+
+
+<li> Attribute
+<ol>
+  <li>Definition: </li>
+  <li><a href="" target="_blank">Source</a></li>
+</ol>
+</li>
+
+
+<li> Boolean
+<ol>
+  <li>Definition: </li>
+  <li><a href="" target="_blank">Source</a></li>
+</ol>
+</li>
+
+
+<li> Dom
+<ol>
+  <li>Definition: </li>
+  <li><a href="" target="_blank">Source</a></li>
+</ol>
+</li>
+
+
+<li> CSS
+<ol>
+  <li>Definition: </li>
+  <li><a href="" target="_blank">Source</a></li>
+</ol>
+</li>
+
+
+<li> Property (CSS)
+<ol>
+  <li>Definition: </li>
+  <li><a href="" target="_blank">Source</a></li>
+</ol>
+</li>
+
+
+<li> Selector (CSS)
+<ol>
+  <li>Definition: </li>
+  <li><a href="" target="_blank">Source</a></li>
+</ol>
+</li>
+
+
+</ul>
 
   Create a list (ordered or unordered) here with a structure similar to following:
   - Element Name
