--- a/Homework1/homework1.html
+++ b/Homework1/homework1.html
@@ -10,7 +10,7 @@
 
 <h1>Jacob - Computer Information Systems</h1>
   Put a paragraph element here with the content being a few sentences as to why you are taking this course
-<p>I am taking this course because it is required for my major.</p1>
+<p>I am taking this course because it is required for my major.</p>
  <h2>The HTML Elements I know</h2>
 
  <ol>
@@ -52,7 +52,7 @@ Paragraph (p) <ol>
 
    <li>
      Anchors (a) <ol>
-  <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/a" target="_blank"<a>Mozilla Doc Link</a></li>
+  <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/a" target="_blank">Mozilla Doc Link</a></li>
   <Li> Display: Inline</li>
   <li> Attributes
    <ol>
