--- a/Homework1/homework1.html
+++ b/Homework1/homework1.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Homework 1 JH</title>
+
 </head>
 <body>
 
@@ -95,8 +96,8 @@ Paragraph (p) <ol>
 <ul>
   <li> HTTP
   <ol>
-    <li>Definition: </li>
-    <li><a href="" target="_blank">Source</a></li>
+    <li>Rules used to transfer data over the internet.</li>
+    <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTTP" target="_blank">Source</a></li>
   </ol>
 </li>
 
@@ -104,63 +105,63 @@ Paragraph (p) <ol>
 
 <li> HTML
 <ol>
-  <li>Definition: </li>
-  <li><a href="" target="_blank">Source</a></li>
+  <li>Language read by the browser to create the content of a web page</li>
+  <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">Source</a></li>
 </ol>
 </li>
 
 
 <li> Element
 <ol>
-  <li>Definition: </li>
-  <li><a href="" target="_blank">Source</a></li>
+  <li>Contains an opening and closing tag (alligators with words between), and can include content in between the two tags.</li>
+  <li><a href="https://developer.mozilla.org/en-US/docs/Web/API/Element" target="_blank">Source</a></li>
 </ol>
 </li>
 
 
 <li> Tag
 <ol>
-  <li>Definition: </li>
-  <li><a href="" target="_blank">Source</a></li>
+  <li>The alligators with words inside</li>
+  <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element" target="_blank">Source</a></li>
 </ol>
 </li>
 
 
 <li> Block (CSS)
 <ol>
-  <li>Definition: </li>
-  <li><a href="" target="_blank">Source</a></li>
+  <li>Something that is displayed as a seperate "block" or line of content.</li>
+  <li><a href="http://learnlayout.com/display.html" target="_blank">Source</a></li>
 </ol>
 </li>
 
 
 <li> Doctype
 <ol>
-  <li>Definition: </li>
-  <li><a href="" target="_blank">Source</a></li>
+  <li>Starting line that says a document is an html document</li>
+  <li><a href="https://developer.mozilla.org/en-US/docs/Glossary/Doctype" target="_blank">Source</a></li>
 </ol>
 </li>
 
 
 <li> Head
 <ol>
-  <li>Definition: </li>
-  <li><a href="" target="_blank">Source</a></li>
+  <li>A special element that has tags like meta and title nested inside of it. Seperate from the body element, which has the real content nested inside.</li>
+  <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/head" target="_blank">Source</a></li>
 </ol>
 </li>
 
 
 <li> Attribute
 <ol>
-  <li>Definition: </li>
-  <li><a href="" target="_blank">Source</a></li>
+  <li>"extentions" inside an opening tag</li>
+  <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Attributes" target="_blank">Source</a></li>
 </ol>
 </li>
 
 
 <li> Boolean
 <ol>
-  <li>Definition: </li>
+  <li>A true/false on/off status</li>
   <li><a href="" target="_blank">Source</a></li>
 </ol>
 </li>
