Finished up homework 1
All set for now

--- a/Homework1/homework1.html
+++ b/Homework1/homework1.html
@@ -162,103 +162,47 @@ Paragraph (p) <ol>
 <li> Boolean
 <ol>
   <li>A true/false on/off status</li>
-  <li><a href="" target="_blank">Source</a></li>
+  <li><a href="https://developer.mozilla.org/en-US/docs/Glossary/Boolean" target="_blank">Source</a></li>
 </ol>
 </li>
 
 
 <li> Dom
 <ol>
-  <li>Definition: </li>
-  <li><a href="" target="_blank">Source</a></li>
+  <li>Document Object Module. A tree created by the browser that shows which elements are children of which other elements</li>
+  <li><a href="https://developer.mozilla.org/en-US/docs/Web/API/Document_Object_Model" target="_blank">Source</a></li>
 </ol>
 </li>
 
 
 <li> CSS
 <ol>
-  <li>Definition: </li>
-  <li><a href="" target="_blank">Source</a></li>
+  <li>Stands for Cascading Style Sheets. It is a language used to change how a website looks visually.</li>
+  <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank">Source</a></li>
 </ol>
 </li>
 
 
 <li> Property (CSS)
 <ol>
-  <li>Definition: </li>
-  <li><a href="" target="_blank">Source</a></li>
+  <li>A part of CSS that can have a value assigned to it. background color would be an example of a property</li>
+  <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Syntax" target="_blank">Source</a></li>
 </ol>
 </li>
 
 
 <li> Selector (CSS)
 <ol>
-  <li>Definition: </li>
-  <li><a href="" target="_blank">Source</a></li>
+  <li>Part of the CSS language used to define which HTML elements will be affected by a declaration.<li>
+  <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Syntax" target="_blank">Source</a></li>
 </ol>
 </li>
 
 
 </ul>
 
-  Create a list (ordered or unordered) here with a structure similar to following:
-  - Element Name
-    - A clickable link to the MDN official document. Make sure this opens in a new browser tab
-    - Display: Inline or Block
-    - Attributes
-      - Name of attribute : Description
-      - List the rest of the attributes for this element (up to a max of 3)
-  - List 5 more (for a total of six element names)
-
-
-  Create a header 2 with the content "Vocab Definitions"
-
-
-  Create a list here for the following vocab words (fill in the definition) and the source
-  P.S. This is the best (and only resource you will need) to do everything below: https://developer.mozilla.org/en-US/docs/Glossary
-  - HTTP
-    - Definition (your own words), try to keep it short (no more than a sentence or two) if possible
-    - Source (from official MDN documents) as a clickable link that opens in a new tab
-  - HTML
-    - Definition (your own words), try to keep it short (no more than a sentence or two) if possible
-    - Source (from official MDN documents) as a clickable link that opens in a new tab
-  - Element
-    - Definition (your own words), try to keep it short (no more than a sentence or two) if possible
-    - Source (from official MDN documents) as a clickable link that opens in a new tab
-  - Tag
-    - Definition (your own words), try to keep it short (no more than a sentence or two) if possible
-    - Source (from official MDN documents) as a clickable link that opens in a new tab
-  - Block (CSS)
-    - Definition (your own words), try to keep it short (no more than a sentence or two) if possible
-    - Source (from official MDN documents) as a clickable link that opens in a new tab
-  - Doctype
-    - Definition (your own words), try to keep it short (no more than a sentence or two) if possible
-    - Source (from official MDN documents) as a clickable link that opens in a new tab
-  - Head
-    - Definition (your own words), try to keep it short (no more than a sentence or two) if possible
-    - Source (from official MDN documents) as a clickable link that opens in a new tab
-  - Attribute
-    - Definition (your own words), try to keep it short (no more than a sentence or two) if possible
-    - Source (from official MDN documents) as a clickable link that opens in a new tab
-  - Boolean
-    - Definition (your own words), try to keep it short (no more than a sentence or two) if possible
-    - Source (from official MDN documents) as a clickable link that opens in a new tab
-  - DOM
-    - Definition (your own words), try to keep it short (no more than a sentence or two) if possible
-    - Source (from official MDN documents) as a clickable link that opens in a new tab
-  - CSS
-    - Definition (your own words), try to keep it short (no more than a sentence or two) if possible
-    - Source (from official MDN documents) as a clickable link that opens in a new tab
-  - Property (CSS)
-    - Definition (your own words), try to keep it short (no more than a sentence or two) if possible
-    - Source (from official MDN documents) as a clickable link that opens in a new tab
-  - Selector (CSS)
-    - Definition (your own words), try to keep it short (no more than a sentence or two) if possible
-    - Source (from official MDN documents) as a clickable link that opens in a new tab
-
-  Put a heading 2 here with the content "Reflection"
-
-  Using paragraph elements to separate you paragraphs, briefly describe your experience in the class in the last three weeks. 1-2 paragraphs is fine, but feel free to write more if you want
+<h2>Reflection</h2>
+<p>The first week of class was relatively easy for me since I have experience from high school. I'm all set with HTML, but could use some more practice with CSS. I like that class sometimes finishes early and that there is time in class to work on labs. To be honest I don't like writing reflections and don't have much more to say, so I'm ending it here.</p>
 
 </body>
 </html>
