--- a/Homework2/index.html
+++ b/Homework2/index.html
@@ -1,10 +1,44 @@
 DOCTYPE <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
+      <head>
+        <meta charset="utf-8">
+        <title>Homework 2 Recipe JH</title>
+      </head>
+      <body>
+        <h1>This is Chicken Parm</h1>
+        <img src="\Images\ChickenParm.jpg" alt="">
+        <p>This is a recipe I found off the internet. I don't particuarly like chicken parm, I just htink it has a weird combination of ingredients.</p>
+
+        <h>Directions</h>
+        <ol>
+            <li>Hit the chicken breasts with meat mallet until they are 1/2 inch thick.</li>
+            <li>Beat eggs then set them aside.</li>
+            <li>Mix Bread Crumbs and 1/2 cup of parmesan cheese, then set that aside too.</li>
+            <li>Cover the chicken breats in flour, that means both sides.</li>
+            <li>Dip the flour chicken into the eggs then roll it around in the bread crumbs until fully covered.</li
+            <li>Fry that chicken, but not too much because it also has to go in the oven</li>
+            <li>Heat oven to 450 degrees American</li>
+            <li></li>
+
+
+
+
+
+
+
+
+
+    </ol>
 
   </body>
 </html>
+
+
+
+
+
+
+
+
+
+https://www.allrecipes.com/recipe/223042/chicken-parmesan/
