--- a/Homework1/homework1.html
+++ b/Homework1/homework1.html
@@ -193,7 +193,7 @@ Paragraph (p) <ol>
 
 <li> Selector (CSS)
 <ol>
-  <li>Part of the CSS language used to define which HTML elements will be affected by a declaration.<li>
+  <li>Part of the CSS language used to define which HTML elements will be affected by a declaration.</li>
   <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Syntax" target="_blank">Source</a></li>
 </ol>
 </li>
