--- a/Homework2/Homework2.html
+++ b/Homework2/Homework2.html
@@ -6,7 +6,7 @@
       </head>
       <body>
         <h1>This is Chicken Parm</h1>
-        <img src="/405-Homeworks/Homework2/Images/ChickenParm.jpg" alt="">
+        <img id=#mainpic src="Images/ChickenParm.jpg" alt="">
         <p>This is a recipe I found off the internet. I don't particuarly like chicken parm, I just htink it has a weird combination of ingredients.</p>
 
         <h1>Directions</h1>
@@ -18,10 +18,8 @@
             <li>Dip the flour chicken into the eggs then roll it around in the bread crumbs until fully covered.</li>
             <li>Fry that chicken, but not too much because it also has to go in the oven</li>
             <li>Heat oven to 450 degrees American</li>
-            <li></li>
-
-
-
+            <li>Cover the chicken in 1/3 cup of tomato sauce, then cover that with cheese, then drizzle with olive oil.</li>
+            <li> Put it in the oven until it's done. Eating chicken that is not fully cooked is bad.</li>
 
 
 
@@ -41,4 +39,4 @@
 
 
 
-https://www.allrecipes.com/recipe/223042/chicken-parmesan/
+<!-- https://www.allrecipes.com/recipe/223042/chicken-parmesan/ -->
