--- a/Homework2/index.html
+++ b/Homework2/index.html
@@ -3,11 +3,12 @@
       <head>
         <meta charset="utf-8">
         <title>Homework 2 Recipe JH</title>
+        <link rel="stylesheet" type="text/css" href="Style.css">
       </head>
       <body>
         <h1>This is Chicken Parm</h1>
-        <img id=#mainpic src="Images/ChickenParm.jpg" alt="">
-        <p>This is a recipe I found off the internet. I don't particuarly like chicken parm, I just htink it has a weird combination of ingredients.</p>
+        <img id="mainpic" src="Images/ChickenParm.jpg" alt="">
+        <p>This is a recipe I found off the internet. I don't particuarly like chicken parm, I just think it has a weird combination of ingredients.</p>
 
         <h1>Directions</h1>
         <ol>
@@ -16,15 +17,33 @@
             <li>Mix Bread Crumbs and 1/2 cup of parmesan cheese, then set that aside too.</li>
             <li>Cover the chicken breats in flour, that means both sides.</li>
             <li>Dip the flour chicken into the eggs then roll it around in the bread crumbs until fully covered.</li>
-            <li>Fry that chicken, but not too much because it also has to go in the oven</li>
-            <li>Heat oven to 450 degrees American</li>
+            <li>Fry that chicken, but not too much because it also has to go in the oven.</li>
+            <li>Heat oven to 450 degrees American.</li>
             <li>Cover the chicken in 1/3 cup of tomato sauce, then cover that with cheese, then drizzle with olive oil.</li>
             <li> Put it in the oven until it's done. Eating chicken that is not fully cooked is bad.</li>
 
 
-    </ol>
+        </ol>
 
-    
+        <h1>Nutrition</h1>
+        <table class="bordered">
+            <tr>
+                <th>Fat per serving</th>
+                <th>Protein per serving</th>
+                <th>Carbohydrates per serving</th>
+                <th>Total calories per serving</th>
+            </tr>
+            <tr>
+                <td>24.9 grams</td>
+                <td>42.1 grams</td>
+                <td>24.8 grams</td>
+                <td>471 calories</td>
+            </tr>
+
+
+
+
+        </table>
 
   </body>
 </html>
