--- a/Homework2/index.html
+++ b/Homework2/index.html
@@ -20,7 +20,7 @@
             <li>Fry that chicken, but not too much because it also has to go in the oven.</li>
             <li>Heat oven to 450 degrees American.</li>
             <li>Cover the chicken in 1/3 cup of tomato sauce, then cover that with cheese, then drizzle with olive oil.</li>
-            <li> Put it in the oven until it's done. Eating chicken that is not fully cooked is bad.</li>
+            <li>Put it in the oven until it's done. Eating chicken that is not fully cooked is bad.</li>
 
 
         </ol>
@@ -45,6 +45,7 @@
 
         </table>
 
+        <a href="details.html"><nav>Ingredient Details</nav></a>
   </body>
 </html>
 
