--- a/Homework2/details.html
+++ b/Homework2/details.html
@@ -17,61 +17,52 @@
         </tr>
         <tr>
             <td>Chicken Breast</td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td><img class="ingpic" src="Images/breast.jpg" alt=""></td>
+            <td>$5.34</td>
+            <td><a href="https://www.walmart.com/ip/Perdue-Harvestland-Fresh-Chicken-Breast-Tenderloins-Free-Range-1-lb/42294615">You have to go to the store to buy this</a></td>
         </tr>
         <tr>
             <td>Tomato Sauce</td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td><img class="ingpic" src="Images/sauce.jpeg" alt=""></td>
+            <td>$1.48</td>
+            <td><a href="https://www.walmart.com/ip/Great-Value-Tomato-Sauce-29-oz/10415506">Link</a></td>
         </tr>
         <tr>
             <td>Bread Crumbs</td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td><img class="ingpic" src="Images/breadcrumb.jpg" alt=""></td>
+            <td>$0.98</td>
+            <td><a href="https://www.walmart.com/ip/Great-Value-Plain-Bread-Crumbs-15-oz/10315089">Link</a></td>
         </tr>
         <tr>
             <td>Eggs</td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td><img class="ingpic" src="Images/egg.jpg" alt=""></td>
+            <td>$1.30</td>
+            <td><a href="https://www.walmart.com/ip/Farmhouse-Large-Grade-A-Brown-Eggs-12-Count/49409646">You have to go to the store to buy this</a></td>
         </tr>
         <tr>
             <td>Flour</td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td><img class="ingpic" src="Images/flour.jpg" alt=""></td>
+            <td>$1.48</td>
+            <td><a href="https://www.walmart.com/ip/Great-Value-All-Purpose-Flour-32-oz/19802852">Link</a></td>
         </tr>
         <tr>
             <td>Parmesan Cheese</td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>Chicken Breast</td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td><img class="ingpic" src="Images/parm.jpg" alt=""></td>
+            <td>$6.98</td>
+            <td><a href="https://www.walmart.com/ip/Kraft-100-Grated-Parmesan-Cheese-Shaker-16-oz-Bottle/10295354?athcpid=10295354&athpgid=athenaItemPage&athcgid=null&athznid=tic&athieid=v0&athstid=CS020&athguid=466001f5-46cfa622-4a781b8d9a18a716&athena=true">Link</a></td>
         </tr>
         <tr>
             <td>Mozzarella Cheese</td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td><img class="ingpic" src="Images/mozz.jpg" alt=""></td>
+            <td>$7.99/lb</td>
+            <td><a href="http://www.marketbasket.com/Product.aspx?cat=18&subcat=36">You have to go to the store to buy this</a></td>
+        </tr>
+        <tr>
+            <td><strong>Total Cost: $25.52 </strong></td>
         </tr>
 
 
-
-
-
-
-
     </table>
-
 
 
 
