Minor change to detail table
Added colspan attribute and centered total price

--- a/Homework2/details.html
+++ b/Homework2/details.html
@@ -58,7 +58,7 @@
             <td><a href="http://www.marketbasket.com/Product.aspx?cat=18&subcat=36">You have to go to the store to buy this</a></td>
         </tr>
         <tr>
-            <td><strong>Total Cost: $25.52 </strong></td>
+            <td class="test" colspan="4"><strong class="test">Total Cost: $25.52 </strong></td>
         </tr>
 
 
