--- a/Homework3/index-parta.html
+++ b/Homework3/index-parta.html
@@ -7,13 +7,13 @@
   </head>
   <body>
 
-  <section class="card">
+  <div class="card">
     <header>
       <h2>Chris Mills</h2>
     </header>
     <article>
       <img src="chris.jpg" alt="A picture of Chris - a man with glasses, a beard, and a silly wooly hat">
-      <p>50 My Street</br>
+      <p>50 My Street<br>
          The Town<br>
          Gray Peach<br>
          UK<br>
@@ -24,7 +24,7 @@
     <footer>
       <p>Editing, writing, and web development services</p>
     </footer>
-  </section>
+</div>
 
   </body>
 </html>
