--- a/Homework3/index-partb.html
+++ b/Homework3/index-partb.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>Cool box</title>
-    
+        <link rel="stylesheet" href="styles-partb.css">
+        <meta charset="utf-8">
+        <title>Cool box</title>
   </head>
   <body>
       <p>This is a cool box</p>
