--- a/Homework3/index-parta.html
+++ b/Homework3/index-parta.html
@@ -7,7 +7,7 @@
   </head>
   <body>
 
-  <div class="card">
+  <section class="card">
     <header>
       <h2>Chris Mills</h2>
     </header>
@@ -24,7 +24,7 @@
     <footer>
       <p>Editing, writing, and web development services</p>
     </footer>
-</div>
+</section>
 
   </body>
 </html>
