--- a/Homework2/details.html
+++ b/Homework2/details.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=`device-width`, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Homework 2 Details</title>
-    <link rel="stylesheet" type="text/css" href="Style.css">
+    <link rel="stylesheet" type="text/css" href="STYLE.css">
 </head>
 <body>
     <table class="bordered">
@@ -72,7 +72,7 @@
 
 
 
-    <a href="index.html"><nav>Home Page</nav></a>
+    <a href="INDEX.html"><nav>Home Page</nav></a>
 
 </body>
 </html>
