--- a/Homework4/index.html
+++ b/Homework4/index.html
@@ -1,48 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=`device-width`, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="Author" content="Jacob Henry"
+    <meta name="Author" content="Jacob Henry">
     <title>Homework 4</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-  <body>
+
+<body>
     <nav class="navbar">
-      <div class="navlink">item 1</div>
-      <div class="navlink">item 2</div>
-      <div class="navlink">item 3</div>
+        <div class="navlink"><a href="https://www.google.com/">item 1</a></div>
+        <div class="navlink"><a href="https://www.google.com/"">item 2</a></div>
+        <div class=" navlink"><a href="https://www.google.com/">item 3</a></div>
+        <div class="navlink"><a href="https://www.google.com/">item 4</a></div>
+        <div class="navlink"><a href="https://www.google.com/">item 5</a></div>
     </nav>
 
     <main class="main">
-      <div class="container">
+        <div class="container">
+            <div class="imageholder">
+                <img src="sample.jpg" alt="sample image" class="img img1">
+                <img src="sample.jpg" alt="sample image" class="img img2">
+                <img src="sample.jpg" alt="sample image" class="img img3">
+            </div>
+            <div class="article article1">
+                <article class="Content">
+                    <h2>Florida Man does it again</h2>
+                </article>
+            </div>
+            <div class="article article2">
+                <article class="content">
+                    <h2>History is made</h2>
+                </article>
+            </div>
+            <div class="article article3">
+                <article class="content">
+                    <h2>My dog is named Simon</h2>
+                </article>
+            </div>
+        </div>
 
-      </div>
+        <aside class="sidebar">
+            <p class="info info1">Lorem ipsum dolor amet schlitz food truck woke, jean shorts adaptogen heirloom venmo cliche unicorn vaporware kickstarter pork belly biodiesel. Hammock meggings plaid swag, ramps literally whatever blog
+                chicharrones. Shaman hot chicken meggings cardigan palo santo lumbersexual jianbing. Authentic vinyl blue bottle prism, fixie hexagon ramps migas mixtape vexillologist PBR&B butcher disrupt. Franzen cred helvetica pabst, lumbersexual
+                ugh locavore yr art party succulents seitan 90's PBR&B iPhone.</p>
+            <p class="info info2">Microdosing aesthetic umami normcore, 3 wolf moon cliche locavore migas blog +1 quinoa roof party. Vice messenger bag cold-pressed pour-over enamel pin wayfarers paleo. Lumbersexual selvage snackwave, chicharrones
+                glossier jianbing put a bird on it gluten-free pitchfork tote bag vegan slow-carb. Iceland iPhone XOXO YOLO snackwave. Woke squid etsy +1 blog biodiesel hammock cred migas affogato. La croix taiyaki iceland try-hard cloud bread
+                selfies bitters.
 
-      <article class="article">
-      <article>
-
-
-
-
-
+            </p>
+            <p class="info info3">Paleo cliche beard humblebrag cred try-hard umami ennui helvetica fixie salvia. 90's venmo brooklyn neutra post-ironic succulents banh mi put a bird on it bespoke cliche beard jean shorts freegan whatever. Chambray
+                you probably haven't heard of them skateboard, thundercats occupy man bun normcore irony truffaut celiac tote bag. Slow-carb wolf lumbersexual 90's waistcoat gastropub, live-edge gochujang photo booth beard etsy lo-fi subway tile.
+                Cardigan jianbing pickled woke ethical kombucha.</p>
+        </aside>
     </main>
 
+    <div class="contact">
+        <form action="google.com" method="get" class="form">
+            <legend>Contact Form</legend>
+            First name:<br>
+            <input class="formitem" type="text" name="firstname"><br>
+            Last name:<br>
+            <input class="formitem" type="text" name="lastname"><br>
+            Phone Number<br>
+            <input class="formitem" type="text" name="603"><br>
+            <input class="formitem" type="submit" value="submit">
+        </form>
+    </div>
+
+    <footer class="footer">
+        <p class="footerinfo">Exclusive intelectual property of Jacob Henry, do not steal.</p>
+        <p class="footerinfo">Not that I will do anything if you do steal this.</p>
+    </footer>
 
 
 
 
 
 
+</body>
 
-
-
-
-
-
-
-
-
-  </body>
 </html>
