--- a/Homework4/index.html
+++ b/Homework4/index.html
@@ -49,8 +49,9 @@
                 ugh locavore yr art party succulents seitan 90's PBR&B iPhone.</p>
             <p class="info info2">Microdosing aesthetic umami normcore, 3 wolf moon cliche locavore migas blog +1 quinoa roof party. Vice messenger bag cold-pressed pour-over enamel pin wayfarers paleo. Lumbersexual selvage snackwave, chicharrones
                 glossier jianbing put a bird on it gluten-free pitchfork tote bag vegan slow-carb. Iceland iPhone XOXO YOLO snackwave. Woke squid etsy +1 blog biodiesel hammock cred migas affogato. La croix taiyaki iceland try-hard cloud bread
-                selfies bitters.
-
+                selfies bitters. Authentic lomo meggings, gluten-free banh mi before they sold out mixtape flexitarian deep v slow-carb wayfarers. Flexitarian sriracha tote bag, vape VHS gentrify mixtape biodiesel vexillologist fingerstache pickled
+                poke 3 wolf moon +1. Banjo green juice church-key shaman cred single-origin coffee celiac unicorn yr taxidermy lo-fi tote bag pok pok bespoke. Hammock sustainable cray vice, fixie listicle meditation. Disrupt you probably haven't
+                heard of them keffiyeh lyft pop-up listicle semiotics try-hard trust fund kombucha.
             </p>
             <p class="info info3">Paleo cliche beard humblebrag cred try-hard umami ennui helvetica fixie salvia. 90's venmo brooklyn neutra post-ironic succulents banh mi put a bird on it bespoke cliche beard jean shorts freegan whatever. Chambray
                 you probably haven't heard of them skateboard, thundercats occupy man bun normcore irony truffaut celiac tote bag. Slow-carb wolf lumbersexual 90's waistcoat gastropub, live-edge gochujang photo booth beard etsy lo-fi subway tile.
